crates/parser/tests/snapshots/test_type_system__cast_with_relation.snap
---
source: crates/parser/tests/test_type_system.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "test",
                        parameters: [
                            Parameter {
                                name: "x",
                                type_ref: Some(
                                    TypeReference {
                                        path: Package {
                                            name: "Any",
                                            parent: None,
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 2,
                                                start_column: 22,
                                                end_line: 2,
                                                end_column: 24,
                                            },
                                        },
                                        type_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 22,
                                            end_line: 2,
                                            end_column: 24,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 19,
                                    end_line: 2,
                                    end_column: 19,
                                },
                            },
                        ],
                        return_type: TypeReference {
                            path: Package {
                                name: "Any",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 31,
                                    end_line: 2,
                                    end_column: 33,
                                },
                            },
                            type_arguments: [],
                            type_variable_values: [],
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 31,
                                end_line: 2,
                                end_column: 33,
                            },
                        },
                        return_multiplicity: PureOne,
                        body: [
                            ArrowFunction(
                                ArrowFunction {
                                    target: Variable(
                                        Variable {
                                            name: "x",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 5,
                                                end_line: 4,
                                                end_column: 5,
                                            },
                                        },
                                    ),
                                    function: "cast",
                                    arguments: [
                                        TypeReferenceExpr(
                                            TypeReferenceExpr {
                                                type_ref: TypeReference {
                                                    path: Package {
                                                        name: "Relation",
                                                        parent: None,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 4,
                                                            start_column: 15,
                                                            end_line: 4,
                                                            end_column: 22,
                                                        },
                                                    },
                                                    type_arguments: [
                                                        TypeReference {
                                                            path: Package {
                                                                name: "a",
                                                                parent: None,
                                                                source_info: SourceInfo {
                                                                    source: "test.pure",
                                                                    start_line: 4,
                                                                    start_column: 25,
                                                                    end_line: 4,
                                                                    end_column: 25,
                                                                },
                                                            },
                                                            type_arguments: [
                                                                TypeReference {
                                                                    path: Package {
                                                                        name: "Integer",
                                                                        parent: None,
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 27,
                                                                            end_line: 4,
                                                                            end_column: 33,
                                                                        },
                                                                    },
                                                                    type_arguments: [],
                                                                    type_variable_values: [],
                                                                    source_info: SourceInfo {
                                                                        source: "test.pure",
                                                                        start_line: 4,
                                                                        start_column: 27,
                                                                        end_line: 4,
                                                                        end_column: 33,
                                                                    },
                                                                },
                                                            ],
                                                            type_variable_values: [],
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 25,
                                                                end_line: 4,
                                                                end_column: 25,
                                                            },
                                                        },
                                                    ],
                                                    type_variable_values: [],
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 4,
                                                        start_column: 15,
                                                        end_line: 4,
                                                        end_column: 22,
                                                    },
                                                },
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 14,
                                                    end_line: 4,
                                                    end_column: 14,
                                                },
                                            },
                                        ),
                                    ],
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 7,
                                        end_line: 4,
                                        end_column: 8,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
