crates/parser/tests/snapshots/test_type_system__relation_column_types.snap
---
source: crates/parser/tests/test_type_system.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "test",
                        parameters: [
                            Parameter {
                                name: "r",
                                type_ref: Some(
                                    TypeReference {
                                        package: None,
                                        name: "X",
                                        type_arguments: [
                                            TypeReference {
                                                package: None,
                                                name: "a",
                                                type_arguments: [
                                                    TypeReference {
                                                        package: None,
                                                        name: "Integer",
                                                        type_arguments: [],
                                                        type_variable_values: [
                                                            Integer(
                                                                200,
                                                                SourceInfo {
                                                                    source: "test.pure",
                                                                    start_line: 2,
                                                                    start_column: 35,
                                                                    end_line: 2,
                                                                    end_column: 37,
                                                                },
                                                            ),
                                                        ],
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 2,
                                                            start_column: 27,
                                                            end_line: 2,
                                                            end_column: 33,
                                                        },
                                                    },
                                                ],
                                                type_variable_values: [],
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 25,
                                                    end_line: 2,
                                                    end_column: 25,
                                                },
                                            },
                                            TypeReference {
                                                package: None,
                                                name: "z",
                                                type_arguments: [
                                                    TypeReference {
                                                        package: None,
                                                        name: "V",
                                                        type_arguments: [],
                                                        type_variable_values: [
                                                            String(
                                                                "ok",
                                                                SourceInfo {
                                                                    source: "test.pure",
                                                                    start_line: 2,
                                                                    start_column: 45,
                                                                    end_line: 2,
                                                                    end_column: 48,
                                                                },
                                                            ),
                                                        ],
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 2,
                                                            start_column: 43,
                                                            end_line: 2,
                                                            end_column: 43,
                                                        },
                                                    },
                                                ],
                                                type_variable_values: [],
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 41,
                                                    end_line: 2,
                                                    end_column: 41,
                                                },
                                            },
                                        ],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 22,
                                            end_line: 2,
                                            end_column: 22,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 19,
                                    end_line: 2,
                                    end_column: 19,
                                },
                            },
                        ],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "X",
                                type_arguments: [
                                    TypeReference {
                                        package: None,
                                        name: "a",
                                        type_arguments: [
                                            TypeReference {
                                                package: None,
                                                name: "Integer",
                                                type_arguments: [],
                                                type_variable_values: [
                                                    Integer(
                                                        200,
                                                        SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 2,
                                                            start_column: 71,
                                                            end_line: 2,
                                                            end_column: 73,
                                                        },
                                                    ),
                                                ],
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 63,
                                                    end_line: 2,
                                                    end_column: 69,
                                                },
                                            },
                                        ],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 61,
                                            end_line: 2,
                                            end_column: 61,
                                        },
                                    },
                                    TypeReference {
                                        package: None,
                                        name: "z",
                                        type_arguments: [
                                            TypeReference {
                                                package: None,
                                                name: "V",
                                                type_arguments: [],
                                                type_variable_values: [
                                                    String(
                                                        "ok",
                                                        SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 2,
                                                            start_column: 81,
                                                            end_line: 2,
                                                            end_column: 84,
                                                        },
                                                    ),
                                                ],
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 79,
                                                    end_line: 2,
                                                    end_column: 79,
                                                },
                                            },
                                        ],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 77,
                                            end_line: 2,
                                            end_column: 77,
                                        },
                                    },
                                ],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 58,
                                    end_line: 2,
                                    end_column: 58,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        body: [
                            Variable(
                                Variable {
                                    name: "r",
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 5,
                                        end_line: 4,
                                        end_column: 5,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
